<resources>
    <string name="app_name">Rock Paper Scissors</string>
    <string name="start_button_label">Start</string>
    <string name="rock_hand_description">Rock hand</string>
    <string name="paper_hand_description">Paper hand</string>
    <string name="scissors_hand_description">Scissors hand</string>
    <string name="player_selection_title">How many players?</string>
    <string name="player_selection_sub_title">Choose the amount</string>
    <string name="two_players_button">2 Players</string>
    <string name="three_players_button">3 players</string>
    <string name="hand_picking_title">Let\'s play!</string>
    <string name="hand_picking_sub_title">Pick an option</string>
    <string name="results_player_lost">You lost =(</string>
    <string name="results_player_won">You won! =)</string>
    <string name="results_draw">It\'s a draw =|</string>
    <string name="results_your_hand">Your hand</string>
    <string name="resultsPlayerHandIllustrationDescription">Player\'s hand</string>
    <string name="hand_result_default_player_name">Player name</string>
    <string name="hand_result_illustration_description">The hand played</string>
    <string name="results_exit_button">Exit</string>
</resources>